# italy-property-finder

./: .gitignore  convert_kml_to_geojson.py  ingest_omi_data.py  main.py  pyproject.toml
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: AirbnbListings.jsx  AnalysisPanel.jsx  FinancialSummary.jsx  ZoneExplorer.jsx  ZoneFilters.jsx  ZoneMap.jsx
frontend/src/hooks/: useScrapeJob.js
frontend/src/utils/: finance.js
src/: __init__.py  airbnb_scraper.py  api.py  database.py  financial_model.py  omi_data.py  str_metrics.py  zone_geography.py  zone_sampler.py
tests/: test_airbnb_scraper.py  test_api.py  test_database.py  test_financial_model.py  test_omi_data.py  test_str_metrics.py  test_zone_geography.py  test_zone_sampler.py
