[project]
name = "italy-real-estate-finder"
version = "0.1.0"
description = "Find optimal short-term rental investment properties across Italy"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "curl-cffi>=0.14.0",
    "flask>=3.1.3",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
